--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ssh2": "^1.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
