--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "buffer": "^6.0.3",
     "lucide-react": "^0.555.0",
+    "process": "^0.11.10",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0",
+    "sip.js": "^0.21.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
